syntax = "proto3";

package morse;
import "google/protobuf/timestamp.proto";

option java_package = "com.github.ytake.morse.message.combine";
option go_package = "github.com/ytake/morse-message/pbd";

message UserAction {
  uint64 correlationId = 1;
  enum EventType {
    CREATED = 0;
    DELETED = 1;
  }
  EventType event = 2;
  uint32 userId = 3;
  string name = 4;
  google.protobuf.Timestamp created = 5;
}
